# colab-virtual-desktop

./: .gitignore  CHANGELOG.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  README.md  SETUP_GUIDE.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
colab_desktop/: __init__.improved.py  __init__.py  base.py  cli.py  cli_improved.py  config_improved.py  core.py  core_improved.py  core_refactored.py  health_improved.py  helpers.py  logger_improved.py  port_manager_improved.py  type_stubs.pyi  utils_improved.py
